Bigger logo in sidebar + login, favicon from logo.png for browser tab

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,6 +27,8 @@
         <!-- PWA Manifest -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
         
         <!-- Google Analytics - Replace GA_MEASUREMENT_ID with your actual ID from Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
