feat: add per-page SEO meta tags, JSON-LD structured data, and canonical URLs
- Install react-helmet-async for dynamic per-page meta tags
- Create reusable SEO component (components/SEO.js)
- Create per-page SEO config with titles, descriptions, keywords, JSON-LD (lib/seoConfig.js)
- Add HelmetProvider wrapper in App.js
- Wire SEO component into all 17 page components
- Update index.html canonical URL and OG tags to moneysaarthi.in
- JSON-LD WebApplication schema for tool pages, Product schema for pricing
- Covers: Dashboard, Options, Signals, Market, Sectors, AI Agent, Algo, Calculators, LTP, TradeFinder, Journal, Backtest, Pricing, Login, Settings, Profile

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,11 +10,11 @@
         <meta name="keywords" content="Money Saarthi, MoneySaarthi, F&O trading, Indian stock market, stock scanner, trading strategies, NSE, BSE, options trading, futures trading" />
         <meta name="author" content="Money Saarthi" />
         <meta name="robots" content="index, follow" />
-        <link rel="canonical" href="https://moneysaarthi.web.app/" />
+        <link rel="canonical" href="https://moneysaarthi.in/" />
         
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://moneysaarthi.web.app/" />
+        <meta property="og:url" content="https://moneysaarthi.in/" />
         <meta property="og:title" content="Money Saarthi | F&O Trading Companion" />
         <meta property="og:description" content="Your trusted F&O Trading Companion for Indian Stock Market. Real-time scanners, strategies, and analysis tools." />
         <meta property="og:site_name" content="Money Saarthi" />
